<resources>
    <string name="app_name">Aguas Riojanas</string>
    <string name="b_datos_utiles">Datos Útiles</string>
    <string name="b_notificaciones">Notificaciones</string>
    <string name="b_reclamo">Reclamos</string>
    <string name="b_estado_de_cuenta">Estado de Cuenta</string>
    <string name="b_unidad_facturacion">Unidad Facturación</string>
    <string name="title_activity_datos_utiles">Datos Útiles</string>
    <string name="title_activity_notificaciones">Notificaciones</string>
    <string name="menu_lugares_de_pago">Lugares pago</string>
    <string name="menu_oficinas_comerciales">Oficinas</string>
    <string name="menu_datos_de_contacto">Contacto</string>
    <string name="tv_error">ERROR</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="tv_ingresar">Ingresar</string>
    <string name="b_iniciar_sesion_con_correo">Acceder con correo</string>
    <string name="title_activity_emailpassword">Crear Cuenta / Iniciar Sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aguas Riojanas SAPEM</string>
    <string name="nav_header_subtitle">desarrollo@aguasriojanas.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cerrar_sesion">¿Esta seguro que desea cerrar sesión?</string>
    <string name="tv_progress_bar">SINCRONIZANDO</string>
    <string name="cerrar_sesion_cuerpo">Recuerde que para volver a iniciar sesión debe estar en la misma red del servidor.</string>
    <string name="title_activity_unidad_facturacion">Unidad de Facturación</string>
    <string name="title_activity_nueva_unidad">Nueva unidad</string>
    <string name="title_activity_estado_cuenta">Estado de cuenta</string>
    <string name="title_activity_reclamos">Reclamos</string>
    <string name="title_activity_nuevo_reclamo">Nuevo reclamo</string>
    <string name="tab_estado_cuenta_1">Último</string>
    <string name="tab_estado_cuenta_2">Vencidos</string>
    <string name="tab_reclamo_1">Solicitados</string>
    <string name="tab_reclamo_2">Terminados</string>
    <string name="fab_reclamo">Nuevo</string>
    <string name="tv_ubicacion_de_reclamo">Ubicación del reclamo</string>
    <string name="tv_unidades_de_reclamo">Unidad</string>
    <string name="tv_tipo_de_reclamo">Tipo de reclamo</string>
    <string name="hint_direccion_del_reclamo">Dirección del reclamo</string>
    <string name="hint_descripcion_reclamo">Descripción\n(opcional)</string>
    <string name="b_enviar_reclamo">Enviar reclamo</string>
    <string name="menu_cerrar_sesi_n">Cerrar Sesión</string>
    <string name="request_permission">Se necesita el permiso de la camara para poder adjuntar fotos al reclamo.</string>
    <string name="camera_error">Este dipositivo no soporta el uso de la API Camera2.</string>
    <string name="bGuardar">Guardar</string>
    <string name="bVolver">Volver</string>
    <string name="b_capturar_foto">Tomar foto</string>
    <string name="b_capturar_foto_lista">Foto lista</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="fcm_message">FCM Message</string>
    <string name="b_nueva_unidad">Nueva Unidad</string>

</resources>
