<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llNuevoReclamo"
    style="@style/layout_primary"
    tools:context=".ui.reclamo.NuevoReclamoActivity">

    <RelativeLayout style="@style/background_card">

        <TextView
            android:id="@+id/tv_referencia"
            style="@style/tv_primary"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_tipo_reclamo"
            style="@style/tv_primary_mini"
            android:layout_alignStart="@id/tv_referencia"
            android:layout_marginTop="5dp"
            android:ems="15"
            android:text="@string/tv_tipo_de_reclamo" />

        <Spinner
            android:id="@+id/sp_tipo_reclamo"
            style="@style/et_primary"
            android:layout_below="@+id/tv_tipo_reclamo"
            android:layout_alignStart="@id/tv_referencia"
            android:layout_alignEnd="@id/tv_referencia"
            android:layout_marginTop="0dp"
            android:background="@drawable/sp_redondo" />

        <TextView
            android:id="@+id/tv_ubicacion_reclamo"
            style="@style/tv_primary_mini"
            android:layout_below="@id/sp_tipo_reclamo"
            android:layout_alignStart="@id/tv_referencia"
            android:layout_marginTop="5dp"
            android:ems="15"
            android:text="@string/tv_ubicacion_de_reclamo" />

        <Spinner
            android:id="@+id/sp_ubicacion_reclamo"
            style="@style/et_primary"
            android:layout_below="@+id/tv_ubicacion_reclamo"
            android:layout_alignStart="@id/tv_referencia"
            android:layout_alignEnd="@id/tv_referencia"
            android:layout_marginTop="0dp"
            android:background="@drawable/sp_redondo" />

        <TextView
            android:id="@+id/tv_unidades"
            style="@style/tv_primary_mini"
            android:layout_below="@id/sp_ubicacion_reclamo"
            android:layout_alignStart="@id/tv_referencia"
            android:layout_marginTop="5dp"
            android:ems="15"
            android:text="@string/tv_unidades_de_reclamo" />

        <Spinner
            android:id="@+id/sp_unidades"
            style="@style/et_primary"
            android:layout_below="@+id/tv_unidades"
            android:layout_alignStart="@id/tv_referencia"
            android:layout_alignEnd="@id/tv_referencia"
            android:layout_marginTop="0dp"
            android:background="@drawable/sp_redondo" />

        <EditText
            android:id="@+id/et_direccion_reclamo"
            style="@style/et_primary"
            android:layout_below="@id/sp_unidades"
            android:layout_alignStart="@id/tv_referencia"
            android:hint="@string/hint_direccion_del_reclamo" />

        <EditText
            android:id="@+id/et_descripcion_reclamo"
            style="@style/et_primary"
            android:layout_below="@id/et_direccion_reclamo"
            android:layout_alignStart="@id/tv_referencia"
            android:hint="@string/hint_descripcion_reclamo"
            android:inputType="textMultiLine" />

        <RelativeLayout
            android:id="@+id/rlFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_descripcion_reclamo"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/bCapturarFoto"
                style="@style/b_primary"
                android:drawableEnd="@drawable/ic_photo_camera_white_24dp"
                android:text="@string/b_capturar_foto" />

        </RelativeLayout>


        <Button
            android:id="@+id/bEnviarReclamo"
            style="@style/b_primary"
            android:layout_below="@id/rlFoto"
            android:text="@string/b_enviar_reclamo" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:indeterminate="true"
        android:theme="@style/progress_bar"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvProgressBar"
        style="@style/tv_primary_progress_bar"
        android:layout_above="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_progress_bar"
        android:textAlignment="center"
        android:visibility="gone" />
</RelativeLayout>